Removed padding for LCD, made it fixed width to maintain size when whitespace is added

--- a/source/stylesheets/_board.scss
+++ b/source/stylesheets/_board.scss
@@ -68,7 +68,8 @@ $colour-blue-active: #1C8CFF;
       background-color: white;
 
       border: solid 4px #333333;
-      padding: 2px 20px;
+
+      width: 125px;
 
       font-family: Courier, monospace;
       font-size: 3em;
